styles/components/hero-banner.scss
section.hero-banner {
  position: relative;
  width: 100%;
  height: 474px;
  border-radius: 0 0 15vw 0;
  overflow: hidden;

  @media (min-width: $desktop) {
    height: 700px;
  }

  &.tall {
    height: 535px;

    @media (min-width: $desktop) {
      height: 650px;
    }

    @media (min-width: $desktop-large) {
      height: 700px;
    }

    @media (min-width: $desktop-extra-large) {
      height: 850px;
    }

  }

  #gradient-canvas {
    position: absolute;
    width: 100%;
    height: 100%;

    &.red {
      --gradient-color-1: #fe6f3a;
      --gradient-color-2: #f86f4d;
      --gradient-color-3: #fb228d;
      --gradient-color-4: #d3022d;
    }

    &.green {
      --gradient-color-1: #22e7a0;
      --gradient-color-2: #5cddf2;
      --gradient-color-3: #1371e5;
      --gradient-color-4: #18afc7;
    }

    &.purple {
      --gradient-color-1: #563af4;
      --gradient-color-2: #5d1ee0;
      --gradient-color-3: #874bb0;
      --gradient-color-4: #f85322;
    }

    &.yellow {
      --gradient-color-1: #ff9523;
      --gradient-color-2: #e1160a;
      --gradient-color-3: #c01306;
      --gradient-color-4: #fc8d29;
    }

    &.blue {
      --gradient-color-1: #2fcffd;
      --gradient-color-2: #fd0f15;
      --gradient-color-3: #9674e1;
      --gradient-color-4: #3560b4;
    }
  }

  .background-image, .background-video {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center center;
    position: absolute;
  }

  .banner-text {
    padding-right: 4rem;
    position: absolute;
    height: 474px;
    display: flex;
    flex-direction: column;
    justify-content: center;

    @media (min-width: $desktop) {
      padding-right: 250px;
      padding-left: 58px;
      height: 700px;
    }

    .small-text,
    .large-text {
      color: $white;
    }

    .small-text {
      font-weight: $bold;
      margin-left: 2rem;
      @media (min-width: $desktop) {
        margin-left: 171px;
      }
    }

    .large-text {
      margin-left: 2rem;
      font-weight: $medium;
      max-width: 880px;

      @media (min-width: $desktop) {
        font-size: 90px;
        margin-left: 171px;
      }
    }

    .line {
      height: 1px;
      background-color: #fff;
      display: block;
      width: 1.5rem;
      margin-top: -30px;
      margin-right: 0.5rem;
      @media (min-width: $desktop) {
        width: 153px;
        margin-right: 1rem;
      }
    }

  }

  // Video player controls
  .video-control {
    display: flex;
    align-items: center;
    position: absolute;
    bottom: 22px;
    left: 22px;
    z-index: 10;
    @media (min-width: $tablet) {
      bottom: 55px;
      left: 40px;
    }
  }
  .video-play {
    border: none;
    outline: none;
    background: white;
    display: flex;
    align-items: center;
    justify-content: center;
    color: $black;
    height: 42px;
    width: 42px;
    border-radius: 50%;
    border: 1px solid $grey;
    
    @media (min-width: $tablet) {
      height: 100px;
      width: 100px;
    }

    svg.play-pause {
      max-width: 24px;
      width: 100%;
      height: 100%;
      max-height: 30px;
      line {
        fill:none;
        stroke:$black;
        stroke-linecap:square;
        stroke-width:8px;
      }
      .play-1, .play-2 {
        opacity: 0;
      }
    }
  }
}

